# app-framework

./: .gitignore  CMakeLists.txt  README.md
android/res/values/: strings.xml
src/: Game.cpp  Game.h  Main.cpp
src/core/: App.h  CMakeLists.txt  Log.cpp  Log.h  ShaderObject.cpp  StreamFactory.h
src/core/android/: Activity.cpp  Activity.h  AndroidMain.cpp  AndroidStreamFactory.h  EGLWindow.cpp
src/core/desktop/: Application.cpp  Application.h  DesktopMain.cpp  DesktopStreamFactory.h  GLWindow.cpp
